hphp/hack/test/typecheck/reactive/owned_mutable3.php.exp
File "owned_mutable3.php", line 5, characters 21-58:
Parameter cannot have both `__Mutable` and `__OwnedMutable` annotations. (Parsing[1002])
